--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "methods": "^1.1.2",
     "parseurl": "^1.3.3",
     "setprototypeof": "^1.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
